margin update on header name

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
 #nav-main-txt {
   font-size: 12px;
   font-weight: 500;
+  margin-left: 10px;
 }
 .right-header a {
   text-decoration: none;
