--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,10 @@ html {
   gap: 10px;
 }
 
+.interview {
+  display: none;
+}
+
 .btn-primary {
   background: #6c5ce7;
   color: white;
@@ -557,4 +561,17 @@ h3 {
   .feedback-desc {
     max-width: 90vw;
   }
+
+  #container3D {
+    margin-top: 0;
+  }
+
+  /* About us middle button */
+  .interview {
+    display: block;
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 }
