--- a/css/style.css
+++ b/css/style.css
@@ -293,17 +293,22 @@ html {
     font-weight: 800;
     color: #ffffff;
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   .stat-text {
     font-size: 18px;
     opacity: 0.9;
+    transition: padding-left 0.3s ease;
+  }
+
+  .stat-text:hover {
+    border-radius: 1px;
+    padding-left: 10px;
+    border-left: 2px solid black;
   }
 
   .stats-container a {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     text-decoration: none;
     color: white;
@@ -754,5 +759,5 @@ h3 {
     margin-bottom: 10px;
     text-align: center;
   }
-  
+
 }
