--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,12 @@ h3 {
   font-size: 16px;
   line-height: 1.6;
   margin-bottom: 20px;
+  transition: all 0.3s ease;
+}
+
+.resource-description:hover {
+  padding-left: 10px;
+  border-left: 1px solid black;
 }
 
 .resource-info {
